$Id$

2004-05-03 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/mbox/mbox: Fixed a file descriptor leak.
          The plugin will re-check a mbox now if its size or mtime
          differs.

2004-04-23 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/embrace.c: Added config switch "evas_engine". Set to "gl"
          to make Embrace run off the GL X11 engine.

2004-04-22 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/main.c, src/embrace.c, src/embrace_plugin.c:
          Don't use dl_foreachfile() to load the plugins. We now
          iterate over the files in the plugin directories manually,
          since dl_foreachfile() caused some nasty problems when run
          under Valgrind resp. it didn't seem to work well on some
          systems.

2004-04-18 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/imap/imap.c: Ported the recent fixes for POP3
          to the IMAP plugin

2004-04-17 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/pop3/pop3.c: Don't connect twice to the same
          server.
        * src/plugins/maildir/maildir.c: Added timer-based checking
          to support systems that don't have dnotify.
        * src/embrace.c, src/plugins/pop3/pop3.c,
          src/plugins/imap/imap.c, src/plugins/mbox/mbox.c,
          src/plugins/maildir/maildir.c:
          Finally Embrace will tell you when a mailbox cannot be
          loaded due to configuration errors.
        * src/mailbox.[ch]: mailbox_is_checking_set() now takes a bool
          and emits MAILBOX_UNSET_CHECKING if the mailbox has been
          checked.
        * src/plugins/pop3/pop3.c, src/plugins/imap/imap.c:
          Fixed ecore event handling

2004-04-09 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/pop3/pop3.c: The POP3 plugin will now tell you
          about connection problems. ERR messages from the server will
          be put out stderr now.