@@ -1,5 +1,10 @@
 $Id$
 
+2004-05-05 Tilman Sauerbeck <tilman -at- code-monkey.de>
+        * src/embrace.c: embrace_signal_get() now always returns -1
+          indicating failure in case the OS doesn't know about
+          realtime signals.
+
 2004-05-03 Tilman Sauerbeck <tilman -at- code-monkey.de>
         * src/plugins/mbox/mbox: Fixed a file descriptor leak.
           The plugin will re-check a mbox now if its size or mtime
